equires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier-qlsa"
version = "0.1.0"
description = "qlsa forked from ornl"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "qiskit<2.0",
    "qiskit-algorithms",
    "qiskit-ibm-runtime",
    "qiskit_qasm3_import",
    "qiskit_aer",
    "numpy",
    "matplotlib",
    "scipy>=1.15.0,<1.17.0",
    "pyyaml",
    "quantum_linear_solvers @ https://github.com/jw676/quantum_linear_solvers.git", 
    # "qiskit-ionq"
]

[tool.setuptools]
packages = {find = {where = ["."]}}

[tool.black]
line-length = 88
[tool.ruff]
line-length = 88


